snippets/Nemerle.Statechart/Tests/testsuite/negative/simple_conflict.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using System.Collections.Generic;
using System.Linq;
using System.Console;
using Nemerle.Statechart;

  /// <summary>
  /// Description of PathCover.
  /// </summary>
  [statechart(
  <#
  //flags debug;
  name "simple conflict";
  
  state A
  {
    a => B; // E: Duplicate transitions \"TransitionAToBBya\"
    a => C; // E: Duplicate transitions \"TransitionAToCBya\"
  }

  state B // W: State "B" is not used in fsm life history
  {
  }

  state C // W: State "C" is not used in fsm life history
  {

  }
  #>
  )]
  public class PathCoverFsm
  {

  } 
